tests/doWhile/invalid/Semantic/DoWhileCondErr1.wacc
# invalid condition

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  do
    skip
  while 10
end
